fix edit appointment group dialog layout issues
Fixes CNVS-4081

Improves bootstrap related style issues on the
Edit Appointment Group dialog.

Testing Notes:
===========
* On Calendar2, Scheduler area, create or edit
  an appointment group. Check that text appears
  to line up well with input contents.
* The "Select Calendars" dropdown has decreased
  extra spacing and the "Done" button is less
  crowded with top and right areas.
* The date/time split list should now be tighter
  visually and the 'help' text that appears when
  an input is focused should have date and time
  line up vertically.

  NOTE: Can review bug ticket screenshot for
  other specific issues being addressed.

Reviewed-on: https://gerrit.instructure.com/18431
Tested-by: Jenkins <jenkins@instructure.com>
QA-Review: Cam Theriault <cam@instructure.com>
QA-Review: Myller de Araujo <myller@instructure.com>

--- a/app/stylesheets/calendar/scheduler.sass
+++ b/app/stylesheets/calendar/scheduler.sass
@@ -150,6 +150,8 @@ button.single_item_done_button
   +reset_list
   max-height: 150px
   overflow-y: auto
+  label
+    margin-bottom: 0
 .ag_sections
   +reset_list
   padding-left: 35px
@@ -165,7 +167,7 @@ button.single_item_done_button
 
 .ag_contexts_done
   float: right
-
+  margin:  5px 5px 0 0
 
 .delete-block-link
   +hide-text
@@ -189,9 +191,19 @@ button.single_item_done_button
 .details-wrapper
   clear: both
 
+.splitter
+  input[type="number"], .split-link.btn
+    vertical-align: baseline
+  .split-link
+    margin-right: 3px
 .ag-options
   margin: 0
   padding: 0
+
+  input[type="checkbox"]
+    vertical-align: -2px
+  input[type="checkbox"] + label, input[type="number"]
+    vertical-align: baseline
 
 .ag-options li
   list-style-type: none
